force-app/main/default/objects/CriticalErrors__mdt/CriticalErrors__mdt.object-meta.xml
<CustomObject>
    <description>Armazenamento das informações de erros previstos nas integrações do OM</description>
    <label>CriticalErrors</label>
    <pluralLabel>CriticalErrors</pluralLabel>
</CustomObject>