force-app/main/default/objects/CriticalErrors__mdt/fields/Callbackcode__c.field-meta.xml
<CustomField>
    <fullName>Callbackcode__c</fullName>
    <label>Callbackcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>