force-app/main/default/objects/CriticalErrors__mdt/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>ErrorCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>