force-app/main/default/objects/CriticalErrors__mdt/fields/OriginSystem__c.field-meta.xml
<CustomField>
    <fullName>OriginSystem__c</fullName>
    <label>OriginSystem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>