force-app/main/default/objects/CriticalErrors__mdt/fields/ParametersError__c.field-meta.xml
<CustomField>
    <fullName>ParametersError__c</fullName>
    <description>Ação que será realizada para o Sim Card no GSIM</description>
    <label>ParametersError</label>
    <length>1</length>
    <type>Text</type>
</CustomField>